Modernize collection use
Upgraded modernizer is flagging Lists.newArrayList, migrate code.

Change-Id: Id5367ef1700eae763da677d3292be86bd1cc6d86
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
(cherry picked from commit f90df0b854d508b1851e4bb97765bdcd0175ec42)